# dnn-c

./: CMakeLists.txt  README.md
demo/: test.c
include/: CMakeLists.txt
include/dnn-c/functionals/: softmax.h
include/dnn-c/layers/: conv.h  gru.h  linear.h  lstm.h  relu.h  sigmoid.h
include/dnn-c/tensors/: tensor.h
include/dnn-c/utils/: functional.h  tensor.h
interface/pytorch/: export.py
src/functionals/: relu.c  sigmoid.c  softmax.c
src/layers/: conv.c  gru.c  linear.c  lstm.c  relu.c  sigmoid.c  softmax.c
src/tensors/: tensor.c
src/utils/: functional.c  tensor.c
test/: tests.c
test/units/: test_layers_gru.c  test_layers_gru.h  test_layers_linear.c  test_layers_linear.h  test_layers_lstm.c  test_layers_lstm.h  test_utils_functional.c  test_utils_functional.h
